# chen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  dependabot.yml  docs.yml  release.yml
adrs/: index.html
adrs/0000-template/: index.html
adrs/0001-external-moe-vs-internal-moe/: index.html
adrs/0002-kv-cache-transfer-protocol/: index.html
adrs/0003-pluggable-backend-abstraction/: index.html
adrs/0004-mock-backend-first/: index.html
adrs/0005-logistic-router-default/: index.html
adrs/0006-sqlite-run-store/: index.html
adrs/0007-cc0-license/: index.html
adrs/0008-encryption-at-boundary/: index.html
adrs/0009-api-key-auth-rbac/: index.html
adrs/0010-postgres-run-store/: index.html
adrs/0011-sse-streaming/: index.html
architecture/overview/: index.html
benchmarks/: index.html
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  prometheus.yml
docker/alertmanager/: alertmanager.yml  chen-alerts.yml
docker/grafana/: chen-dashboard.json
docs/: README.md  governance.md  sustainability.md
docs/adrs/: 0000-template.md  0001-external-moe-vs-internal-moe.md  0002-kv-cache-transfer-protocol.md  0003-pluggable-backend-abstraction.md  0004-mock-backend-first.md  0005-logistic-router-default.md  0006-sqlite-run-store.md  0007-cc0-license.md  0008-encryption-at-boundary.md  0009-api-key-auth-rbac.md  0010-postgres-run-store.md  0011-sse-streaming.md  README.md
docs/architecture/: overview.md
docs/assets/: extra.css
docs/benchmarks/: README.md
docs/math/: specifications.md
docs/operations/: README.md  deployment.md  observability.md
docs/operations/runbooks/: incident-response.md  performance-debugging.md
docs/security/: threat-model.md
examples/: run_benchmarks.py  run_phase1.py  run_phase2.py  run_phase3.py  run_real_models.py
governance/: index.html
helm/chen/: Chart.yaml  values.yaml
helm/chen/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret-hf.yaml  service.yaml  servicemonitor.yaml
math/specifications/: index.html
notebooks/: 01_phase1_cascade.ipynb  02_phase2_kv_pass.ipynb  03_phase3_routing.ipynb
operations/: index.html
operations/deployment/: index.html
operations/observability/: index.html
operations/runbooks/incident-response/: index.html
operations/runbooks/performance-debugging/: index.html
scripts/: check_env.py  setup.sh  smoke_test.py
search/: search_index.json
security/threat-model/: index.html
src/chen/: __init__.py
src/chen/backends/: __init__.py  base.py  hf.py  llama_cpp.py  mock.py  registry.py  vllm.py
src/chen/benchmarks/: __init__.py  kpis.py  runner.py  tasks.py
src/chen/cli/: __init__.py  main.py
src/chen/cli/commands/: bench.py  info.py  keys.py  run.py  serve.py
src/chen/core/: __init__.py  carbon.py  config.py  expert.py  kv_cache.py  memory.py  pipeline.py  router.py
src/chen/observability/: __init__.py  audit.py  circuit_breaker.py  logging.py  metrics.py  tracing.py
src/chen/persistence/: __init__.py  pg_store.py  run_store.py  tenant_memory.py
src/chen/phases/: __init__.py  phase1_cascade.py  phase2_kv_pass.py  phase3_routing.py
src/chen/reproducibility/: __init__.py  config_hash.py
src/chen/security/: __init__.py  backends.py  config.py  crypto.py  keys.py  stream.py
src/chen/server/: __init__.py  app.py  auth.py  routes.py
sustainability/: index.html
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_backends.py  test_benchmarks.py  test_carbon.py  test_circuit_breaker.py  test_config.py  test_end_to_end.py  test_expert.py  test_kv_cache.py  test_memory.py  test_observability.py  test_persistence.py  test_phases.py  test_registry.py  test_reproducibility.py  test_router.py  test_security.py  test_standard_benchmarks.py  test_tenant_memory.py  test_tracing.py
tests/benchmarks/: __init__.py  test_pipeline_benchmarks.py
tests/integration/: test_server.py
tests/load/: locustfile.py  soak_test.py
tests/property/: __init__.py  test_kv_cache_props.py  test_router_props.py
