[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chen-arch"
version = "0.1.0"
description = "Collaborative Heterogeneous Expert Network - distributed inference via coordinated small models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC0-1.0" }
authors = [
    { name = "CHEN Contributors" },
]
keywords = [
    "llm",
    "distributed-inference",
    "mixture-of-experts",
    "kv-cache",
    "routing",
    "small-models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "pydantic>=2.0",
    "tiktoken>=0.5; python_version >= '3.10'",
    "typing_extensions>=4.5",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.40",
    "torch>=2.0",
    "tokenizers>=0.15",
    "accelerate>=0.20",
]
vllm = [
    "vllm>=0.4",
]
llama-cpp = [
    "llama-cpp-python>=0.2",
]
memory = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
all = [
    "chen-arch[hf,memory,notebooks,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/chen"
Documentation = "https://github.com/your-org/chen/blob/main/ARCHITECTURE.md"
Repository = "https://github.com/your-org/chen"
Issues = "https://github.com/your-org/chen/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=chen",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"notebooks/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chen.backends.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/chen"]
omit = ["*/tests/*", "*/backends/vllm.py", "*/backends/llama_cpp.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
